--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Namikazes.github.io/react-project-1",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -49,5 +50,8 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(react-leaflet|@react-leaflet|d3-*|axios))"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
